<resources>
    <string name="app_name">Chat</string>


    <string-array name="chatPreferenceListName">
        <item>Location</item>
        <item>Camera</item>
        <item>Gallery</item>
        <item>Delayed Message</item>
        <item>Video Message</item>
    </string-array>
    <string-array name="chatPreferenceListValues">
        <item>Location</item>
        <item>Camera</item>
        <item>Gallery</item>
        <item>Delayed Message</item>
        <item>Video Message</item>
    </string-array>
    <string-array name="lookValues">
        <item>system default</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string-array name="lookName">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="backupEntries">
        <item>My Computer</item>
        <item>Dropbox</item>
    </string-array>
    <string-array name="backupValues">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="backupTime">
        <item>daily</item>
        <item>weekly</item>
        <item>monthly</item>
    </string-array>
    <string-array name="backupTimeValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="textSizeValue">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
    </string-array>
    <string-array name="textSizeName">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="message_hint">type your message here</string>
    <string name="recording">Recording</string>
    <string name="record">Record</string>
    <string name="zero_time">00:00:00</string>
    <string name="voice_message">Voice message</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="search">Serach</string>
    <string name="scroll">Scroll</string>
    <string name="previewImage">Preview Image</string>
    <string name="quote">Quote</string>
    <string name="link">Link</string>
    <string name="playAudio">play audio</string>
    <string name="removeRecording">remove recording</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="back">Back</string>
    <string name="userStatus">status</string>
    <string name="action_btn">actionBtn</string>
    <string name="contact">send contact</string>
    <string name="camera">open camera</string>
    <string name="gallery">open gallery</string>
    <string name="delay">delayed message</string>
    <string name="blocked_conversations">Blocked Conversations</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="muted_conversations">Muted Conversations</string>
    <string name="muted_users">Muted Users</string>
    <string name="your_name">Your Name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="next">Next</string>
    <string name="you">You</string>
    <string name="conversation_name">Conversation Name</string>
    <string name="radio_button1">Radio Button 1</string>
    <string name="radio_button2">Radio Button 2</string>
    <string name="more">add more</string>
    <string name="open_imaji_keyboard">Opens imoji keyboard</string>
    <string name="char_count">characters count</string>
    <string name="scroll_bot">Scroll to Bottom</string>
    <string name="sender_name">senders name</string>
    <string name="link_image_preview">Preview Image</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="add_contact">Add as contact</string>
    <string name="add_phone">Add phone number</string>
    <string name="share">Share</string>
    <string name="add_new_member">Add new member</string>
    <string name="leave">Leave</string>
    <string name="info">Information</string>
    <string name="copy_message">Copy</string>
    <string name="delete">Delete</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="date">Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="start_conversation">Start conversation</string>
    <string name="delete_conversation_confirm_msg">Are you sure you would like to delete the selected conversations? this action can\'t be undone</string>
    <string name="confirm">Confirm Action!</string>
    <string name="nothing_delete">Nothing will be deleted</string>
    <string name="select_conversation_delete">conversations were deleted</string>
    <string name="error">Error</string>
    <string name="changes_message">Changes to the Message</string>
    <string name="views_message">Who viewed and read the Message</string>
    <string name="typing">Typing...</string>
    <string name="message">Message</string>
    <string name="done">Done</string>

</resources>