<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/allConversationsOptions">
        <item
            android:id="@+id/searchMessage"
            android:icon="@drawable/ic_baseline_search_black"
            android:title="@string/search"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/blockConversation"
            android:icon="@drawable/ic_baseline_block_black"
            android:title="@string/block"
            android:visible="true"
            app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/selectedMessageOptions"
        android:visible="false">
        <item
            android:id="@+id/copy"
            android:icon="@drawable/ic_baseline_file_copy_black"
            android:title="@string/copy_message"
            app:showAsAction="never" />
        <item
            android:id="@+id/edit"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/edit"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/delete"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_delete_black"
            android:title="@string/delete"
            android:visible="true"
            app:showAsAction="never" />
        <item
            android:id="@+id/messageInfo"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_info_white"
            android:title="@string/info"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/share"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_share_white"
            android:title="@string/share"
            android:visible="true"
            app:showAsAction="never" />

        <item android:id="@+id/favorite"
            android:enabled="true"
            android:icon="@android:drawable/star_on"
            android:title="favorite"
            app:showAsAction="never"
            android:visible="true"
            />

    </group>
    <group
        android:id="@+id/groupConversationOptions"
        android:visible="false">
        <item
            android:id="@+id/addNewMember"
            android:icon="@drawable/ic_baseline_group_add_24"
            android:title="@string/add_new_member"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/leaveGroup"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/leave"
            app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/singlePersonConversation">
        <item
            android:id="@+id/addPhoneNumber"
            android:enabled="true"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/add_phone"
            app:showAsAction="never" />
        <item
            android:id="@+id/addAsContact"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_contacts_24"
            android:title="@string/add_contact"
            app:showAsAction="never" />
        <item
            android:id="@+id/callBtn"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_call_24"
            android:title="@string/call"
            app:showAsAction="never" />
    </group>
</menu>