<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/allGroup">
    <item
        android:id="@+id/info"
        android:title="@string/info"
        android:icon="@drawable/ic_baseline_info_24"/>

    <item android:id="@+id/media"
        android:title="media"
        android:icon="@drawable/ic_baseline_photo_24"/>

    <item
        android:id="@+id/profile"
        android:title="profile"
        android:icon="@drawable/ic_baseline_account_circle_black"/>
    </group>
    <group android:id="@+id/currentUserGroup"
        android:visible="true">
    <item android:id="@+id/muted"
        android:title="@string/mute"
        android:icon="@drawable/ic_baseline_volume_off_black"/>

    <item android:id="@+id/block"
        android:title="@string/block"
        android:icon="@drawable/ic_baseline_block_black"/>
    </group>
</menu>