<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConversationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_scrollFlags="noScroll">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/goBack"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/circle"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/toolbarProfileImage"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:background="@android:color/holo_blue_light"
                        android:src="@drawable/ic_baseline_account_circle_black"
                        app:shapeAppearanceOverlay="@style/circleImageView" />

                    <ImageView
                        android:id="@+id/statusView"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="-8dp"
                        android:layout_toEndOf="@id/toolbarProfileImage"
                        android:background="@drawable/circle_green"
                        android:contentDescription="@string/userStatus" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    >

                    <TextView
                        android:id="@+id/conversationName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:text="conversation name"
                        android:layout_centerVertical="true"
                        android:textSize="24sp" />


                    <TextSwitcher
                        android:id="@+id/typingIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"/>


                </RelativeLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbarLayout"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/search"
            android:inputType="textMultiLine"
            android:visibility="visible"
            android:layout_marginTop="20dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/search"
                style="?android:attr/buttonBarButtonStyle"
                />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="next"
                app:icon="@drawable/ic_baseline_arrow_forward_24"
                app:iconTint="@android:color/holo_blue_light"
                android:textColor="@android:color/holo_blue_light"
                android:id="@+id/scrollToNext"
                android:backgroundTint="@android:color/white"

                />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchLayout">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/extraMessageLayout"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp" />

        <RelativeLayout
            android:id="@+id/extraMessageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/userInputLayout">


            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/previewImage"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_foreground"
                android:visibility="gone" />

            <TextView
                android:id="@+id/quoteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagePreview"
                android:background="@color/lightBlue"
                android:gravity="start"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/quote"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/linkMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/quoteText"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/linkImage"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/ic_launcher_background"
                    android:contentDescription="@string/link"
                    android:src="@drawable/ic_launcher_foreground" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/linkImage"
                    android:background="@drawable/outgoing_message_look"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/linkTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/linkContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/voiceLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linkMessage"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:visibility="gone"
                android:weightSum="7">


                <ImageButton
                    android:id="@+id/play_pause_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:contentDescription="@string/playAudio"
                    android:src="@drawable/ic_baseline_play_circle_outline_24"
                    android:visibility="visible" />

                <SeekBar
                    android:id="@+id/voiceSeek"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="6"
                    android:progress="0"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/closeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/removeRecording"
                    android:src="@drawable/ic_baseline_close_24"
                    android:visibility="visible" />


            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/userInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <ImageButton
                android:id="@+id/emojiBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/circle"
                android:contentDescription="emoji button"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_tag_faces_24" />

            <com.vanniktech.emoji.EmojiEditText
                android:id="@+id/MessageToSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_toStartOf="@id/ActionBtn"
                android:layout_toEndOf="@id/emojiBtn"
                android:autofillHints=""
                android:focusable="true"
                android:gravity="center"
                android:hint="@string/message_hint"
                android:inputType="textMultiLine|textNoSuggestions"
                android:textSize="15sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/recordingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_toStartOf="@id/ActionBtn"
                android:gravity="center"
                android:text="@string/time"
                android:textSize="30sp"
                android:visibility="gone" />


            <ImageButton
                android:id="@+id/ActionBtn"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:layout_toStartOf="@+id/sendImageSwitch"
                android:background="@android:color/transparent"
                android:contentDescription="@string/location"
                android:foregroundGravity="center"
                android:src="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/smsCharCount"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_toStartOf="@+id/sendImageSwitch"
                android:background="@android:color/transparent"
                android:contentDescription="sms character count"
                android:gravity="center"
                android:visibility="gone" />

            <ImageSwitcher
                android:id="@+id/sendImageSwitch"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/action_btn"
                android:foregroundGravity="center" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>



